--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,15 @@
     <string name="hint_list_name">last name</string>
     <string name="add_list">Add List</string>
     <string name="task_name">Task Name</string>
+
+    <string name="label_color">Label Color</string>
+    <string name="select_color">Select Color</string>
+    <string name="select_members">Select Members</string>
+    <string name="due_date">Due Date</string>
+    <string name="select_due_date">Select Due Date</string>
+    <string name="update">Update</string>
+    <string name="hint_card_name">card name</string>
+    <string name="members">members</string>
+
+
 </resources>
